re PR target/17778 (regression in evaluating long double hexadecimal constants)

PR 17778
        * config/i386/i386.h (TARGET_96_ROUND_53_LONG_DOUBLE): New.
        * config/i386/freebsd.h (SUBTARGET_OVERRIDE_OPTIONS): Remove.
        (TARGET_96_ROUND_53_LONG_DOUBLE): New.
        * config/i386/i386-modes.def (XF): Use it.

From-SVN: r90544